@@ -1,4 +1,8 @@
-﻿drkns 13.09.2014 22:50:49 +0200 - build 4100
+﻿drkns 14.09.2014 00:44:51 +0200 - build 4101
+
+1. Уточнение 4100.
+
+drkns 13.09.2014 22:50:49 +0200 - build 4100
 
 1. При неудачном переключении из редактора в просмотр не освобождалась память.
    Добавлять очередной костыль бессмысленно, поэтому логика владения окнами переделана.
